--- a/實作-OpenAI_api(設計ChatGPT 互動式機器人).ipynb
+++ b/實作-OpenAI_api(設計ChatGPT 互動式機器人).ipynb
@@ -61,11 +61,11 @@
     "import pprint\n",
     "import requests\n",
     "\n",
-    "api_secrect_key = \"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\"\n",
+    "api_secrect_key = \"輸入API_Key\"\n",
     "\n",
     "headers = {\n",
     "    \"Authorization\": f\"Bearer {api_secrect_key}\",\n",
-    "    \"OpenAI-Organization\": \"org-CVDcT3sAB2GL2bpTGVI6NKCm\"\n",
+    "    \"OpenAI-Organization\": \"輸入openAI\"\n",
     "}\n",
     "\n",
     "api_url =\"https://api.openai.com/v1/models\"\n",
